--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -5,7 +5,7 @@
     | Have a list of URLs, not sure whats working or not? Simply add a list of urls seperated by a comma ( ',' ) and search!
   p
     = form_tag({ controller: 'site', action: 'check'}, method: 'POST', class: 'frontpage-check-form') do
-      textarea.col-lg-12[cols="10"]
+      textarea.col-lg-12[cols="10" name="list"]
       
       input.btn.btn-lg.btn-primary type="submit" value="Check »"
 
